--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<ul>
 		<li>Vagrant</li>
-		<li>Docker</li>
-		<li>Ansible</li>
+		<li>Docker - Containers</li>
+		<li>Ansible 2</li>
 		<li>Integração Contínua</li>
 	</ul>
 </body>
-</html>
+</html> 
