--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<ul>
 		<li>Vagrant</li>
-		<li>Docker - Containers</li>
+		<li>Docker</li>
 		<li>Ansible 2</li>
 		<li>Integração Contínua</li>
 	</ul>
