--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<ul>
 		<li>Vagrant</li>
 		<li>Docker</li>
-		<li>Ansible 2</li>
-		<li>Integração Contínua</li>
+		<li>Ansible</li>
+		<li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
 	</ul>
 </body>
 </html> 
